--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.0",
     "date-fns": "^2.30.0",
+    "firebase": "^10.1.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
