--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.4.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.0",
+    "core-js": "^3.32.0",
     "date-fns": "^2.30.0",
     "firebase": "^10.1.0",
     "localforage": "^1.10.0",
@@ -29,6 +30,7 @@
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
+    "regenerator-runtime": "^0.13.11",
     "sass": "^1.63.6",
     "sort-by": "^1.2.0",
     "web-vitals": "^2.1.4"
@@ -58,6 +60,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-react": "^7.22.5",
     "eslint": "^8.45.0"
   }
 }
